--- a/style.css
+++ b/style.css
@@ -215,6 +215,86 @@ body {
     font-weight: 300;
 }
 
+.timeline {
+    position: relative;
+    margin-top: 1rem;
+    padding: 1.4rem 0;
+    list-style: none;
+}
+
+.timeline::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    left: 50%;
+    width: 2px;
+    height: 100%;
+    background-color: var(--bg);
+}
+
+.timeline li {
+    position: relative;
+    margin-bottom: 1.5rem;
+}
+
+.timeline li::before, .timeline li::after {
+    content: '';
+    display: table;
+}
+
+.timeline li::after {
+    clear: both;
+}
+
+.timeline li .timeline-image {
+    left: 50%;
+    width: 10rem;
+    height: 10rem;
+    position: absolute;
+    background-color: var(--bg);
+    border-radius: 50%;
+    transform: translateX(-50%);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+}
+
+.timeline li .timeline-panel {
+    width: 40%;
+    float: left;
+    border: 0.13rem solid var(--bg);
+    padding: 1rem;
+    position: relative;
+    border-radius: 1rem;
+}
+
+.timeline li .timeline-panel::before {
+    content: '';
+    display: inline-block;
+    position: absolute;
+    border-top: 1rem solid transparent;
+    border-left: 1rem solid var(--bg);
+    border-right: 0 solid var(--bg);
+    border-bottom: 1rem solid transparent;
+    top: 5rem;
+    right: -1rem;
+}
+
+.timeline li .timeline-panel::after {
+    content: '';
+    display: inline-block;
+    position: absolute;
+    border-top: 0.87rem solid transparent;
+    border-left: 0.87rem solid #fff;
+    border-right: 0 solid #fff;
+    border-bottom: 0.87rem solid transparent;
+    top: 5.18rem;
+    right: -0.8rem;
+}
+
+
 @media (max-width: 1200px) {
     .home .heart {
         transform: translateX(-50%) translateY(2.8125rem);
